--- a/src/components/Modules/m-material-filter/m-material-filter.scss
+++ b/src/components/Modules/m-material-filter/m-material-filter.scss
@@ -3,10 +3,11 @@
   flex-direction: column;
   justify-content: center;
   gap: 20px;
-  padding: 20px;
-
+  padding-bottom: 20px;
+  
   @include breakpoint('s') {
     flex-direction: row;
+    padding: 20px;
   }
 }
 
